--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "element-plus": "^2.4.2",
     "pinia": "^2.1.7",
     "sass": "^1.69.5",
